# testability-patterns-cpp

./: .gitignore  README.md  setup.sh
derived-class-testable-protected-member-functions/: CMakeLists.txt  unit_tests
derived-class-testable-protected-member-functions/include/: class_under_test.h  testable_class_under_test.h
derived-class-testable-protected-member-functions/src/: class_under_test.cc  testable_class_under_test.cc
derived-class-testable-protected-member-functions/test/: class_under_test.cc
friend-class-testable-private-member-functions/: CMakeLists.txt
friend-class-testable-private-member-functions/include/: class_under_test.h  testable_class_under_test.h
friend-class-testable-private-member-functions/src/: class_under_test.cc  testable_class_under_test.cc
friend-class-testable-private-member-functions/test/: class_under_test_test.cc
friend-function-testable-private-member-functions/: CMakeLists.txt
friend-function-testable-private-member-functions/include/: class_under_test.h
friend-function-testable-private-member-functions/src/: class_under_test.cc
friend-function-testable-private-member-functions/test/: class_under_test_test.cc
parameter-injection/cut_lib/: CMakeLists.txt
parameter-injection/src/: CMakeLists.txt  main.cc
private-implementation-interface/: CMakeLists.txt
private-implementation-interface/include/: class_under_test.h
private-implementation-interface/src/: class_under_test.cc  class_under_test_internal.h
private-implementation-interface/test/: class_under_test.cc
template_parameter_injection/: README.md
(+8 files in other folders)
